updated styles for arrow-icon

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
                                 <div class="header__user-photo">
                                     <img class="header__user-photo-icon" src="./img/user-photo.png" alt="user-photo">
                                 </div>
-                                <svg width="10" height="6" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M1 1L5 5L9 1" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <svg class="header__user-arrow" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g opacity="0.4">
+                                        <path d="M4 6L8 10L12 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </g>
                                 </svg>
                             </div>
                             <div class="header__actions">
@@ -402,6 +404,5 @@
             </div>
         </main>
     </div>
-    <script src="./index.js"></script>
 </body>
 </html>
